--- a/roles/架构师.md
+++ b/roles/架构师.md
@@ -22,13 +22,13 @@
 ## （九）项目文件系统结构设计
 设计项目整体目录结构，确保前后端分离、文档规范存放、服务边界清晰。项目结构需包含以下部分：
 1. 项目根目录结构：定义项目顶层目录划分，包括文档目录、前端项目目录、后端项目目录、数据库目录、部署配置目录等。
-2. 前端项目结构：基于 shadcn UI + React + Vite 技术栈，定义前端项目内部目录结构，包括源码目录（src/assets、src/components、src/hooks、src/layouts、src/pages、src/router、src/api、src/utils、src/store）、配置文件目录、公共资源目录等。
-3. 后端项目结构：根据选定的后端技术栈（Java/SpringBoot、Python/FastAPI、Golang/Gin、Node.js/NestJS），定义后端项目内部目录结构，包括源码目录（按模块划分）、配置目录、公共模块目录、测试目录等。
+2. 前端项目结构：基于 shadcn UI + React + Vite 技术栈，定义前端项目内部目录结构，项目根目录下创建 frontend 目录作为前端项目根目录，包括源码目录（src/assets、src/components、src/hooks、src/layouts、src/pages、src/router、src/api、src/utils、src/store）、配置文件目录、公共资源目录等。
+3. 后端项目结构：根据选定的后端技术栈（Java/SpringBoot、Python/FastAPI、Golang/Gin、Node.js/NestJS），定义后端项目内部目录结构，项目根目录下创建 backend 目录作为后端项目根目录，包括源码目录（按模块划分）、配置目录、公共模块目录、测试目录等。
 4. 数据库目录结构：定义数据库相关文件存放位置，包括迁移脚本、种子数据、SQL 脚本、ORM 模型定义等。
 5. 文档目录结构：定义项目文档组织方式，包括产品需求文档、架构设计文档、开发规范文档、测试文档、用户手册等。
 6. 部署目录结构：定义部署配置文件存放位置，包括 Docker 配置、Kubernetes 配置、CI/CD 配置文件等。
 7. 脚本目录结构：定义项目级脚本存放位置，包括安装脚本、启动脚本、构建脚本、测试脚本、部署脚本等。
-设计完成后，生成《项目结构.md》文档，包含完整的目录树结构、各目录用途说明、关键文件命名规范等内容。文档需保存至《docs/架构设计文档/项目结构.md》目录下。
+设计完成后，生成《docs/项目结构.md》文档，包含完整的目录树结构、各目录用途说明、关键文件命名规范等内容。文档需保存至《docs/项目结构.md》目录下。
 # 四、输出要求
 完整架构设计文档：包含系统架构图、技术栈选型说明、服务划分方案、数据库设计、API 规范、部署方案、性能与安全架构、风险评估（Markdown 格式）。
 技术栈配置文档：包含前端（shadcn UI + React + Vite）、后端、数据库、中间件的版本锁定与配置要求。
