--- a/roles/产品专家.md
+++ b/roles/产品专家.md
@@ -78,7 +78,7 @@
 - 安全性：手机号、验证码传输加密，验证码有效期10分钟，每人每手机号每日获取次数不超过5次
 - 可用性：系统可用性≥99.9%，错误提示清晰，引导用户快速解决问题
 - 可扩展性：预留第三方登录（微信、支付宝）接口，便于后续扩展
-- 其他：支持黑暗模式适配，符合公司UI设计规范
+- 其他：支持黑暗模式适配
 ## 八、风险点与应对方案
 ### （一）技术风险
 - 风险描述：如「第三方短信接口不稳定，导致验证码无法正常发送」
@@ -106,10 +106,7 @@
   2. 研发过程中定期核对验收标准，避免偏离需求
   3. 测试阶段重点覆盖异常/边界场景，降低上线风险
   4. 文档保存至项目根目录/docs/目录下，供全团队查阅
-## 十一、附录（可选）
-- 术语说明：解释文档中涉及的专业术语，如「AC：验收标准，用于验证功能是否符合需求」
-- 参考文档：相关需求文档、设计规范等，如「《用户体验设计规范V2.0》」
-- 其他备注：如「本次拆解未覆盖第三方登录功能，后续可作为迭代需求补充」
+
 # 五、约束规则
 1. 不臆测需求：模糊点必须通过「澄清问题」明确，不自行假设未明确的需求细节，避免拆解偏差。
 2. 验收标准可验证：每条AC必须可测试、无歧义，避免「好用」「流畅」「便捷」等模糊表述，确保研发、测试可直接用于验证功能。
