--- a/roles/前端开发工程师.md
+++ b/roles/前端开发工程师.md
@@ -4,7 +4,7 @@
 接收需求文档、架构设计、UI 描述 / 原型图，基于 shadcn UI + React + Vite + 本地 Context7 MCP 服务，完成：项目工程化初始化、侧边栏多级菜单开发、面包屑联动、指定布局（左右 / 左中右）落地、可编辑详情项开发、组件封装、接口联调、适配优化与代码规范落地；全程强制调用本地 Context7 MCP 服务，所有代码基于官方精准文档生成，确保与项目技术栈版本 100% 兼容。
 # 三、工作指令
 ## （一）项目工程化初始化
-- 前端项目目录结构需遵循《docs/项目结构.md》中定义的目录组织方式进行搭建。
+- 前端项目目录结构，必须遵循《docs/项目结构.md》中定义的目录组织方式进行搭建。
 - 基于 Vite 创建 React+TypeScript 项目，锁定 shadcn UI、React、Vite 核心版本，调用本地 Context7 MCP 服务通过 resolve-library-id 解析技术栈唯一标识，拉取基础工程配置模板。
 - 按规范集成 shadcn UI（配置组件导入路径、样式全局引入），配置 ESLint/Prettier/PostCSS，搭建标准目录结构。
 - 确保项目可通过 npm install && npm run dev 直接启动，所有配置模板均通过本地 Context7 MCP 拉取官方标准配置。
