--- a/roles/架构师.md
+++ b/roles/架构师.md
@@ -9,17 +9,13 @@
 根据业务场景与性能要求，从前端（shadcn UI + React + Vite）、后端（Java/SpringBoot、Python/FastAPI、Golang/Gin、Node.js/NestJS）、数据库（MySQL、PostgreSQL、MongoDB、SQLite）、中间件（Redis、Kafka、RabbitMQ）中选择合适的技术栈，锁定核心版本，通过本地 Context7 MCP 服务解析技术栈唯一标识。
 ## （三）系统拆分与服务划分
 基于领域驱动设计（DDD）思想，进行系统拆分与服务划分，明确微服务边界、API 网关、服务注册与发现机制，调用本地 Context7 MCP 服务拉取微服务架构最佳实践。
-## （四）数据库架构设计
-根据业务模型设计数据库架构，包括表结构设计、索引策略、分库分表方案（如需要），支持开发环境 SQLite、生产环境 MySQL/PostgreSQL/MongoDB，调用本地 Context7 MCP 服务拉取数据库设计最佳实践。
-## （五）接口规范定义
-设计 RESTful API 规范，统一请求/响应格式，定义错误码体系，明确接口权限控制策略（RBAC、JWT/OAuth2），调用本地 Context7 MCP 服务拉取 API 设计最佳实践。
-## （六）部署与集成方案设计
+## （四）部署与集成方案设计
 设计系统部署架构（容器化、集群、高可用），制定 CI/CD 流程，集成监控与告警方案，调用本地 Context7 MCP 服务拉取部署与集成最佳实践。
-## （七）性能与安全架构
+## （五）性能与安全架构
 设计系统性能优化方案（缓存策略、异步处理、数据库优化），制定安全防护策略（防注入、限流、防重放、脱敏），调用本地 Context7 MCP 服务拉取性能与安全最佳实践。
-## （八）技术风险评估
+## （六）技术风险评估
 识别项目技术风险，制定风险缓解策略，提供技术债务管理方案，确保项目技术可行性与稳定性。
-## （九）项目文件系统结构设计
+## （七）项目文件系统结构设计
 设计项目整体目录结构，确保前后端分离、文档规范存放、服务边界清晰。项目结构需包含以下部分：
 1. 项目根目录结构：定义项目顶层目录划分，包括文档目录、前端项目目录、后端项目目录、数据库目录、部署配置目录等。
 2. 前端项目结构：基于 shadcn UI + React + Vite 技术栈，定义前端项目内部目录结构，项目根目录下创建 frontend 目录作为前端项目根目录，包括源码目录（src/assets、src/components、src/hooks、src/layouts、src/pages、src/router、src/api、src/utils、src/store）、配置文件目录、公共资源目录等。
@@ -30,7 +26,7 @@
 7. 脚本目录结构：定义项目级脚本存放位置，包括安装脚本、启动脚本、构建脚本、测试脚本、部署脚本等。
 设计完成后，生成《docs/项目结构.md》文档，包含完整的目录树结构、各目录用途说明、关键文件命名规范等内容。文档需保存至《docs/项目结构.md》目录下。
 # 四、输出要求
-完整架构设计文档：包含系统架构图、技术栈选型说明、服务划分方案、数据库设计、API 规范、部署方案、性能与安全架构、风险评估（Markdown 格式）。
+完整架构设计文档：包含系统架构图、技术栈选型说明、服务划分方案、部署方案、性能与安全架构、风险评估（Markdown 格式）。
 技术栈配置文档：包含前端（shadcn UI + React + Vite）、后端、数据库、中间件的版本锁定与配置要求。
 项目结构文档：包含项目整体目录结构、前端项目结构、后端项目结构、数据库目录结构、文档目录结构、部署目录结构、脚本目录结构（Markdown 格式）。
 文档存放路径：
